Closed
Bug 85547
Opened 25 years ago
Closed 25 years ago
browser freezes after loading pdf
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: shrir, Assigned: dougt)
References
()
Details
(Keywords: hang, Whiteboard: [PDT+])
Attachments
(1 file)
|
831 bytes,
patch
|
Details | Diff | Splinter Review |
windows -612 trunk
Steps to Reproduce:
1. Launch Netscape browser
2. Go to URL:
http://www.mozilla.org/quality/browser/front-end/testcases/plugins/flashtest.htm
l
3. Under Steps/Directions click on link in item #1.
4. Click on Enter
5. After next screen loads, click on Please ClickHere
6. When next page loads, click on magenta colored icon for Products
7. Click on Pro 70, 3rd item down on left
8. On right side click on PDF
9. Click on any PDF file that appears at bottom of page.
Result:
pdf loads but browser freezes and I cannot navigate...
I see error loading the pdf document, possible dup of 85529 as byte ranges are
used here, but I cannot reproduce the freeze.
| Reporter | ||
Comment 2•25 years ago
|
||
I tried to load the bottom left pdf...the top left pdf loads..but when I use
scrollbar to navigate..browser freezes.
| Reporter | ||
Comment 3•25 years ago
|
||
updating test url..this is the one that freezes..
I see this. The last thing I see in the console is byte range request. Bug 85529
becoming more and more important.
Comment 6•25 years ago
|
||
I wonder if I screwe something up with that other OnDataAvail.
Andrei, we should try to consolidate the overload ODA in ns4xPluginStreamListener.
My gut says the problem is there.
| Reporter | ||
Comment 7•25 years ago
|
||
one more test url :
click on " GPS Guide for Beginners (Adobe Acrobat Required)" on this page below:
http://www.eangler.com/eangler/proshop/productdetail.asp?prod%5Fid=2522&JEX=54
It unfreezes after some time, but freezes again when I try do something with
the document (like scrolling). The last thing I see on the console is
RequestRead called by plugin: 0-1,2-3
Error loading URL http://www.garmin.com/manuals/gps4beg.pdf : 804b0002
Comment 9•25 years ago
|
||
Sounds like a bug with the RequestRead() stuff. Isn't that 0-1,2-3 a "special
combination"? cc:ing Doug and Liz.
| Assignee | ||
Comment 10•25 years ago
|
||
This is probably a dup of the bad byte range bug that I have.
Comment 11•25 years ago
|
||
The read request 0-1,2-3 is issued when you have the
background downloading option disabled (turned on by default).
This is a bogus read to kill the initial connection.
| Assignee | ||
Comment 12•25 years ago
|
||
www.powershot.com returns a incorrect http header. Instead of sending
"content-range", it just sends "range".
However, like with the other "byte range bugs" I am still getting errors when
loading the pdf.
| Assignee | ||
Comment 13•25 years ago
|
||
| Assignee | ||
Comment 14•25 years ago
|
||
The last patch fixes the "freeze". Can I get a r/sr.
Av, reassigning to myself since I have the patch.
Assignee: av → dougt
Comment 15•25 years ago
|
||
I love inconsistent servers. r=valeski
Comment 17•25 years ago
|
||
sr=rpotts
Yes!!! Who needs a spec when we've got servers like this out there :-)
| Assignee | ||
Comment 18•25 years ago
|
||
Fixed on trunk. This probably should go onto the branch...
Comment 19•25 years ago
|
||
From netcraft :
The site www.powershot.com is running Netscape-Enterprise/3.6 SP3 on Solaris.
<grin>
Comment 20•25 years ago
|
||
(vtrunk means this is fixed on trunk and should verify on trunk :-) Looks like
it's been on the trunk a few days, as you said.)
I'll go ahead and PDT+ this since reading pdf files are fairly common.
| Assignee | ||
Comment 21•25 years ago
|
||
fixed on both branch and trunk
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 22•25 years ago
|
||
verified on trunk win0705. The freeze no longer happens, however bug 76892
will verify on branch next. removing 'btrunk' keywd.
Keywords: vtrunk
| Reporter | ||
Comment 23•25 years ago
|
||
oops, i meant:
however bug 76892 is seen sometimes...will verify othis fix on branch next.
removing 'vtrunk' keywd.
| Reporter | ||
Comment 24•25 years ago
|
||
works like a charm on win branch 0706.Dougt rocks! VERIFIED
Status: RESOLVED → VERIFIED
Comment 25•25 years ago
|
||
Thank you, Doug!
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•