Fix for some servers that send "Range" instead of "Content-Range".  r=peterl, sr=rpotts bug 85547.